--- a/index.html
+++ b/index.html
@@ -1,23 +1,78 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta charset="UTF-8">
-  <title>Rezoan Simanto</title>
-  <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
-</head>
-<body>
-  <noscript>This page requires JavaScript to work, please enable it or just read it on <a href="https://github.com/rez1coder/rez1coder.github.io">Here</a>.</noscript>
-  <div id="app">Loading...</div>
-  <script>
-    window.$docsify = {
-      name: 'Rezoan Simanto',
-      repo: 'rez1coder/rez1coder.github.io',
-      search: ['/']
-    }
-  </script>
-  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-  <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
-</body>
+  <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="UTF-8">
+
+    <!-- HTML Meta Tags -->
+    <title>Rez1Coder | Competitive Programmer</title>
+    <meta name="description" content="Get the inside scoop on competitive programming and contests from Rez1coder, a seasoned competitive programmer. Follow Rez1coder's blog for tips, strategies, and insights on how to succeed in coding competitions and take your skills to the next level.">
+    <meta name="keywords" content="rez1coder, software developer, competitive programmer, coding, programming, portfolio, tech, code">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Rezoan Simanto">
+    <meta itemprop="description" content="Get the inside scoop on competitive programming and contests from Rez1coder, a seasoned competitive programmer. Follow Rez1coder's blog for tips, strategies, and insights on how to succeed in coding competitions and take your skills to the next level.">
+    <meta itemprop="image" content="https://raw.githubusercontent.com/rez1coder/rez1coder.github.io/main/logo.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://rez1coder.github.io">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Rezoan Simanto">
+    <meta property="og:description" content="Get the inside scoop on competitive programming and contests from Rez1coder, a seasoned competitive programmer. Follow Rez1coder's blog for tips, strategies, and insights on how to succeed in coding competitions and take your skills to the next level.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/rez1coder/rez1coder.github.io/main/logo.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Rezoan Simanto">
+    <meta name="twitter:description" content="Get the inside scoop on competitive programming and contests from Rez1coder, a seasoned competitive programmer. Follow Rez1coder's blog for tips, strategies, and insights on how to succeed in coding competitions and take your skills to the next level.">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/rez1coder/rez1coder.github.io/main/logo.png">
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css" title="docsify-darklight-theme" type="text/css">
+
+    <!-- Favicon -->
+    <link rel="icon" href="logo.png" type="image/gif">
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3LJB2KCF40"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-3LJB2KCF40');
+    </script>
+  </head>
+
+  <body>
+    <noscript>This page requires JavaScript to work, please enable it or read <a href="https://github.com/rez1coder/rez1coder.github.io">here</a>.</noscript>
+
+    <div id="app">Loading...</div>
+
+    <script>
+      window.$docsify = {
+        name: "Rezoan Simanto",
+        repo: "rez1coder/rez1coder.github.io",
+        search: ["/"],
+        darklightTheme: {
+          siteFont : "Source Sans Pro, Helvetica Neue",
+          defaultTheme : "light",
+          codeFontFamily : "Roboto Mono, Monaco, courier, monospace",
+          bodyFontSize: "15px"
+        }
+      }
+    </script>
+
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js" type="text/javascript"></script>
+
+    <style>
+      blockquote:first-of-type {
+        background-color: rgba(235, 248, 242, 0.363);
+      }
+    </style>
+  </body>
 </html>
